--- a/src/styles/chatPartnerProfile.css
+++ b/src/styles/chatPartnerProfile.css
@@ -3,7 +3,7 @@
     top: 0;
     right: 0;
     width: 60vw;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: #f1f4f4;
     z-index: 1;
     display: none;
