--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #f1f4f4;
     border-right: 1px solid rgb(228, 225, 225);
     display: none;
@@ -63,7 +63,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #f1f4f4;
     border-right: 1px solid rgb(228, 225, 225);
     display: none;
