--- a/src/styles/userList.css
+++ b/src/styles/userList.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #ffffff;
     border-right: 1px solid rgb(228, 225, 225);
     display: none;
